--- a/app/views/start_playing/statistics.html.erb
+++ b/app/views/start_playing/statistics.html.erb
@@ -1,20 +1,37 @@
 <div class='row'>
   <div class='col-md-12 center-bloc'>
-    <h4 class="center-block"> STATISTICSi </h4>
+    <h4 class="center-block"> STATISTICS </h4>
  
-    <table class="table table-bordered">
+    <table class="table table bordered">
       <thead>
-        <% @stats.first.each do |statistic| %>
-          <th><%= "Game #{statistic.last}" if statistic.first.match(/game_/)%></th>
-        <%end%>
+        <th class='th-column-width'></th>
+        <% @table_headers.each do |header| %>
+          <th><%= header %></th>
+        <% end %>
       </thead>
+
       <tbody>
-    </table>
+        <% @users.each_with_index do |name, index| %>
+          <tr>
+            <td>
+              <%= name.upcase %>
+            </td>
+            <% ob = index == 0 ? @dealers_score : @players_score %> 
+            <% ob.each do |score| %>
+              <td><%= score %></td>
+            <% end %>
+
+          </tr>
+        <% end %>
+      </tbody>
+   </table>
 
   <div class='center-block'>
      <button type="button" class="btn btn-default btn-lg col-md-5">
        <%= link_to 'Deal Again', '/play' %>
      </button>
   </div>
+  
+
   
 </div>
